--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_example
 spring.datasource.username=root
 spring.datasource.password=wasd3wer
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.session.jdbc.initialize-schema=always
+spring.jpa.properties.hibernate.format_sql=true
 spring.security.user.name=<test>
 spring.security.user.password=<test>
 #spring.jpa.show-sql: true
